# draftsh2025

./: .gitignore  LICENSE  README.md  pyproject.toml
src/draftsh/: comparison.py  dataset.py  feature.py  parsers.py  utils.py
src/draftsh/config/dataset/: default.json
src/draftsh/config/feature/: minimal.json  preset1.json
src/draftsh/data/miscs/: xu2025_validation_HEAs.xlsx
src/draftsh/data/tests/: snapshot_dataset.npz  snapshot_featurized.npz  test_dataset.xlsx
tests/: generate_snapshot.py  test.py
