[project]
name = "draftsh"
version = "0.1.0"
description = "load in-house datset and featurize, export to numpy.array or pandas.DataFrame"
authors = [
    {name = "changhyun yi",email = "chhyyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pymatgen (>=2025.6.14,<2026.0.0)",
    "matminer (>=0.9.3,<0.10.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]

[tool.poetry]
packages = [{include = "draftsh", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
